--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+  apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "kong.qingwei.opencv320"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -27,4 +27,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.github.kongqw:PermissionsManager:1.1.0'
+    compile 'com.github.ngreedy:tribe_lib:3.3.5'
+
 }
